fix minor issues with the parameters to be passed.

--- a/WebOptimizer.Core.Sample/WebOptimizer.Core.Sample.csproj
+++ b/WebOptimizer.Core.Sample/WebOptimizer.Core.Sample.csproj
@@ -8,7 +8,7 @@
       <Content Include="html\main.html">
         <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
       </Content>
-      <Content Include="html\other.html">
+      <Content Include="html\others\other.html">
         <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
       </Content>
     </ItemGroup>
