--- a/WebOptimizer.Core.Sample/WebOptimizer.Core.Sample.csproj
+++ b/WebOptimizer.Core.Sample/WebOptimizer.Core.Sample.csproj
@@ -14,11 +14,11 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="LigerShark.WebOptimizer.Core" Version="1.0.173-beta" />
+        <PackageReference Include="LigerShark.WebOptimizer.Core" Version="1.0.215" />
         <PackageReference Include="LigerShark.WebOptimizer.LESS" Version="2.7.2-beta" />
         <PackageReference Include="LigerShark.WebOptimizer.TypeScript" Version="2.5.8-beta" />
         <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
-        <PackageReference Include="SharpScss" Version="1.3.8" />
+        <PackageReference Include="SharpScss" Version="1.4.0" />
     </ItemGroup>
 
     <ItemGroup>
