update project files

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,14 +11,6 @@ install:
   - ps: (New-Object System.Net.WebClient).DownloadFile($urlCurrent, $tempFileCurrent)
   - ps: Add-Type -AssemblyName System.IO.Compression.FileSystem; [System.IO.Compression.ZipFile]::ExtractToDirectory($tempFileCurrent, $env:DOTNET_INSTALL_DIR)
   - ps: $env:Path = "$env:DOTNET_INSTALL_DIR;$env:Path" 
-dotnet_csproj:
-  patch: true
-  file: '**\*.csproj'
-  version: '{version}'
-  package_version: '{version}'
-  assembly_version: '{version}'
-  file_version: '{version}'
-  informational_version: '{version}'
 nuget:
   disable_publish_on_pr: true
 build_script:
@@ -27,11 +19,12 @@ test: off
 artifacts:
 - path: .\src\artifacts\**\*.nupkg
   name: NuGet
+ 
 deploy:
 - provider: NuGet
   name: production
-  skip_symbols: true
   api_key:
     secure: btoBG0IlGqSMBtVLUjeXmVtFT7B9Lw6CNf85ryr8Urf3982Vlz1LDkmIewZ/1tF7
   on:
+    branch: master
     appveyor_repo_tag: true
