--- a/src/WebOptimizer.AngularTemplateCache.csproj
+++ b/src/WebOptimizer.AngularTemplateCache.csproj
@@ -19,4 +19,16 @@
     <PackageReference Include="LigerShark.WebOptimizer.Core" Version="1.0.215" />
   </ItemGroup>
 
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+		<DefineConstants>DEBUG;TRACE</DefineConstants>
+		<DebugType>full</DebugType>
+		<DebugSymbols>true</DebugSymbols>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+		<DebugType>pdbonly</DebugType>
+		<DebugSymbols>true</DebugSymbols>
+	</PropertyGroup>
+
+
 </Project>
