--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,6 +3,6 @@
     <Company>King David Consulting LLC</Company>
     <Authors>kdcllc</Authors>
     <LangVersion>latest</LangVersion>
-    <VersionPrefix>1.0.0</VersionPrefix>
+    <VersionPrefix>1.0.*</VersionPrefix>
   </PropertyGroup>
 </Project>
