--- a/WebOptimizer.Core.Sample/WebOptimizer.Core.Sample.csproj
+++ b/WebOptimizer.Core.Sample/WebOptimizer.Core.Sample.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>netcoreapp2.0</TargetFramework>
@@ -15,8 +15,8 @@
 
     <ItemGroup>
         <PackageReference Include="LigerShark.WebOptimizer.Core" Version="1.0.215" />
-        <PackageReference Include="LigerShark.WebOptimizer.LESS" Version="2.7.2-beta" />
-        <PackageReference Include="LigerShark.WebOptimizer.TypeScript" Version="2.5.8-beta" />
+        <PackageReference Include="LigerShark.WebOptimizer.LESS" Version="2.7.5-beta" />
+        <PackageReference Include="LigerShark.WebOptimizer.TypeScript" Version="2.5.10-beta" />
         <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
         <PackageReference Include="SharpScss" Version="1.4.0" />
     </ItemGroup>
