--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-version: '{build}'
+version: 1.0'{build}'
 pull_requests:
   do_not_increment_build_number: true
 image: Visual Studio 2017
@@ -13,18 +13,20 @@ install:
   - ps: $env:Path = "$env:DOTNET_INSTALL_DIR;$env:Path" 
 nuget:
   disable_publish_on_pr: true
+
 build_script:
-- ps: .\Build.ps1
-test: off
+  - dotnet restore -v quiet
+  - ps: dotnet build /p:configuration=Release /p:Version=$($env:appveyor_build_version)
+
 artifacts:
 - path: .\src\artifacts\**\*.nupkg
-  name: NuGet
+  name: NuGet package
  
 deploy:
 - provider: NuGet
-  name: production
+  artifact: /NuGet/
   api_key:
     secure: btoBG0IlGqSMBtVLUjeXmVtFT7B9Lw6CNf85ryr8Urf3982Vlz1LDkmIewZ/1tF7
   on:
     branch: master
-    appveyor_repo_tag: true
+    appveyor_repo_commit_message_extended: /\[release\]/
