--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,7 +19,7 @@ build_script:
   - ps: dotnet build /p:configuration=Release /p:Version=$($env:appveyor_build_version)
 
 artifacts:
-- path: .\src\artifacts\**\*.nupkg
+- path: .\src\bin\Release\**\*.nupkg
   name: NuGet package
  
 deploy:
