--- a/.editorconfig
+++ b/.editorconfig
@@ -72,9 +72,9 @@ dotnet_naming_style.start_underscore_style.required_prefix      = _
 # CSharp code style settings:
 [*.cs]
 # Prefer "var" everywhere
-csharp_style_var_for_built_in_types                   = false : suggestion
+csharp_style_var_for_built_in_types                   = true : suggestion
 csharp_style_var_when_type_is_apparent                = true : suggestion
-csharp_style_var_elsewhere                            = false : suggestion
+csharp_style_var_elsewhere                            = true : suggestion
 
 # Prefer method-like constructs to have a block body
 csharp_style_expression_bodied_methods                = false : none
@@ -92,6 +92,7 @@ csharp_style_pattern_matching_over_as_with_null_check = true : suggestion
 csharp_style_inlined_variable_declaration             = true : suggestion
 csharp_style_throw_expression                         = true : suggestion
 csharp_style_conditional_delegate_call                = true : suggestion
+csharp_style_deconstructed_variable_declaration       = true : suggestion
 
 # Newline settings
 csharp_new_line_before_open_brace                     = all
