--- a/src/WebOptimizer.AngularTemplateCache.csproj
+++ b/src/WebOptimizer.AngularTemplateCache.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-      <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\WebOptimizer.Sass.xml</DocumentationFile>
-      <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
       <PackageTags>angularjs,html,templates, bundle, minify, optimize, asp.net core</PackageTags>
       <Description>Compiles Html files for the AngularJs using LigerShark.WebOptimizer.Core system.</Description>
       <Copyright>Copyright © King David Consulting LLC</Copyright>
