--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,6 +18,9 @@ build_script:
   - dotnet restore -v quiet
   - ps: dotnet build /p:configuration=Release /p:Version=$($env:appveyor_build_version)
 
+  test_script:
+  - dotnet test test/xUnitTests.csproj
+
 artifacts:
 - path: .\src\bin\Release\**\*.nupkg
   name: NuGet package
